--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -63,7 +63,7 @@
                 <nav class="mt-2">
                     <ul class="nav nav-pills nav-sidebar flex-column my-nav-sidebar " data-widget="treeview" role="menu" data-accordion="false">
                         <li class="nav-item">
-                            <a href="../../index.html" class="nav-link font-labels">
+                            <a href="#" class="nav-link" onclick="StartInference();return false;">
                                 <i class="nav-icon fa-solid fa-circle-play navbar-fa"></i>
                                 <p style="color:red">Start Demo</p>
                             </a>
