--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -61,6 +61,10 @@ body {
     background-color: #2a445d !important;
 }
 
+.my-col {
+    min-width:320px;
+}
+
 .font-labels {
     font-family: 'Inter' !important;
     font-style: normal !important;
@@ -323,24 +327,27 @@ body {
         }
 
 .my-div-image {
-    padding : 0 !important;
-    height:340px;
-    max-height:340px;
+    padding: 0 !important;
+    /*width:100%;*/
+    width:566px;
+    height:433px;
 }
 
 .canvasOverlay {
     position: absolute;
-    height: 340px;
-    max-height: 340px;
+    width: 100%;
 }
 
 .my-canvas {
-    /*    max-width: 100%;
-*/ max-height: 340px;
-    height: 340px;
-    width: 100%;
-    /*    height:100%;
-*/
+    position:absolute;
+    /*min-width:320px;*/
+    border: thin solid !important;
+    border-width: 0.1px !important;
+    border-color: yellow !important;
+    padding:0;
+    aspect-ratio: 4/3;
+    object-fit:scale-down;
+    height:100%;
 }
 
 .my-slider {
