--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -61,29 +61,29 @@
 
                 <!-- Sidebar Menu -->
                 <nav class="mt-2">
-                    <ul class="nav nav-pills nav-sidebar flex-column my-nav-sidebar " data-widget="treeview" role="menu" data-accordion="false">
+                    <ul class="nav nav-pills nav-sidebar flex-column my-nav-sidebar" data-widget="treeview" role="menu" data-accordion="false">
                         <li class="nav-item">
                             <a href="#" class="nav-link" onclick="StartInference();return false;">
-                                <i class="nav-icon fa-solid fa-circle-play navbar-fa"></i>
-                                <p style="color:red">Start Demo</p>
+                                <img src="~/images/Play.svg" alt="AI" width="24" height="24" style="vertical-align: text-top;margin-right:8px">
+                                <p class="font-menu-item">Start Demo</p>
                             </a>
                         </li>
                         <li class="nav-item">
                             <a href="../../index.html" class="nav-link font-labels">
-                                <i class="nav-icon fa-solid fa-circle-stop navbar-fa"></i>
-                                <p style="color:red">Stop Demo</p>
+                                <img src="~/images/Stop.svg" alt="AI" width="24" height="24" style="vertical-align: text-top;margin-right:8px">
+                                <p class="font-menu-item">Stop Demo</p>
                             </a>
                         </li>
                         <li class="nav-item">
                             <a href="../../index.html" class="nav-link font-labels">
-                                <i class="nav-icon fa-solid fa-cloud navbar-fa"></i>
-                                <p style="color:red">Check Connectivity</p>
+                                <img src="~/images/Cloud.svg" alt="AI" width="24" height="24" style="vertical-align: text-top;margin-right:8px">
+                                <p class="font-menu-item">Check Connectivity</p>
                             </a>
                         </li>
                         <li class="nav-item">
                             <a href="#" class="nav-link" onclick="EnableDisableLogCard();return false;">
-                                <i class="nav-icon fas fa-cogs"></i>
-                                <p id="labeltxAreaStatus">Display Logs</p>
+                                <img src="~/images/Settings.svg" alt="AI" width="24" height="24" style="vertical-align: text-top;margin-right:8px">
+                                <p id="labeltxAreaStatus" class="font-menu-item">Display Logs</p>
                             </a>
                         </li>
                     </ul>
