Update image frame

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -72,7 +72,7 @@
                         <div class="container loader-parent my-div-image" id="canvasCamera1Container">
                             <div class="row justify-content-center align-items-center" style="margin:0;height:100%;width:100%">
                                 <canvas class="my-canvas" id="canvasCamera1Overlay" style="z-index:300"></canvas>
-                                <canvas class="my-canvas" id="canvasCamera1" style="z-index:100;position:absolute"></canvas>
+                                <canvas class="my-canvas" id="canvasCamera1" style="z-index:100;border-color:red !important;border: thin double !important;"></canvas>
                             </div>
                             <div id="canvasCamera1LoaderWrapper" class="canvasLoaderWrapper" style="height:100%;width:100%;display:block">
                                 <div class="canvasLoader">
@@ -151,7 +151,7 @@
                         <div class="container loader-parent my-div-image" id="canvasCamera2Container">
                             <div class="row justify-content-center align-items-center" style="margin:0;height:100%;width:100%">
                                 <canvas class="my-canvas" id="canvasCamera2Overlay" style="z-index:300"></canvas>
-                                <canvas class="my-canvas" id="canvasCamera2" style="z-index:100;position:absolute"></canvas>
+                                <canvas class="my-canvas" id="canvasCamera2" style="z-index:100;border-color:red !important;border: thin double !important;"></canvas>
                             </div>
                             <div id="canvasCamera2LoaderWrapper" class="canvasLoaderWrapper" style="height:100%;width:100%;display:block">
                                 <div class="canvasLoader">
