--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -63,13 +63,13 @@
                 <nav class="mt-2">
                     <ul class="nav nav-pills nav-sidebar flex-column my-nav-sidebar" data-widget="treeview" role="menu" data-accordion="false">
                         <li class="nav-item">
-                            <a href="#" class="nav-link" onclick="StartInference();return false;">
+                            <a href="#" class="nav-link" onclick="StartInferences();return false;">
                                 <img src="~/images/Play.svg" alt="AI" width="24" height="24" style="vertical-align: text-top;margin-right:8px">
                                 <p class="font-menu-item">Start Demo</p>
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a href="../../index.html" class="nav-link font-labels">
+                            <a href="#" class="nav-link" onclick="StopInferences();return false;">
                                 <img src="~/images/Stop.svg" alt="AI" width="24" height="24" style="vertical-align: text-top;margin-right:8px">
                                 <p class="font-menu-item">Stop Demo</p>
                             </a>
