--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -644,6 +644,21 @@ li.my-nav-header, .my-nav-header, li.nav-item, .nav-item {
     border-radius: 4px !important;
 }
 
+.btn-image-refresh {
+    box-sizing: border-box !important;
+    border: 1px solid var(--status-grey) !important;
+    display: flex !important;
+    flex-direction: row !important;
+    justify-content: center !important;
+    align-items: center !important;
+    padding: 8px 10px !important;
+    width: auto !important;
+    height: 35px !important;
+    color: var(--status-grey) !important;
+    background-color: transparent !important;
+    border-radius: 4px !important;
+}
+
 Absolute Center Spinner
 .loading {
     position: fixed;
