--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -75,7 +75,7 @@
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a href="../../index.html" class="nav-link font-labels">
+                            <a href="#" class="nav-link" onclick="HideOverlay();return false;">
                                 <img src="~/images/Cloud.svg" alt="AI" width="24" height="24" style="vertical-align: text-top;margin-right:8px">
                                 <p class="font-menu-item">Check Connectivity</p>
                             </a>
